--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [Log]
-FileName            = ~/Desktop/edit-your-project-name.log
+FilePath            = ~/Desktop/edit-your-project-name.log
 MaxSize             = 50
 Debug               = true
 StatusTickerTime    = 60
