optimize config logic

--- a/config.ini
+++ b/config.ini
@@ -12,10 +12,9 @@ Prefix  =
 Sep     = :
 
 [MySQL]
+Addr    = 127.0.0.1:6379
 User    = root
 Pwd     =
-Host    = 127.0.0.1
-Port    = 3306
 DB      =
 
 [Fiber]
