optimize struct and logic

--- a/config.ini
+++ b/config.ini
@@ -1,23 +1,32 @@
 [Log]
-FilePath            = ~/Desktop/edit-your-project-name.log
+FilePath            = ./run.log
+DebugInfo           = true
+RequestLogStdout    = true
 MaxSize             = 50
-Debug               = true
 StatusTickerTime    = 60
 
 [Redis]
-Addr    = 127.0.0.1:6379
+Addr    =
 Pwd     =
-DB      = 0
+DB      =
 Prefix  =
-Sep     = :
+Sep     =
 
 [MySQL]
-Addr    = 127.0.0.1:6379
-User    = root
+Addr    =
+User    =
 Pwd     =
 DB      =
 
 [Fiber]
-AppName = edit-your-project-name
-Addr    = 0.0.0.0:2770
-RequestLogStdout    = true
+ListenOption    = HTTP
+HTTPListenAddr  = :80
+HTTPSListenAddr = :443
+TLSCertFile     = ./cert.pem
+TLSKeyFile      = ./cert.key
+LimitMax        = 7
+LimitExp        = 10
+
+[App]
+AppName =
+NodeId  = 1
