--- a/config.ini
+++ b/config.ini
@@ -1,22 +1,28 @@
-[Log]
-FilePath            = ./run.log
-DebugInfo           = true
-RequestLogStdout    = true
-MaxSize             = 50
-StatusTickerTime    = 60
-
-[Redis]
-Addr    =
-Pwd     =
-DB      =
-Prefix  =
-Sep     =
+[Log] ;日志
+FilePath    = ./run.log
+MaxSize     = 50
+DebugInfo   = false
 
 [MySQL]
-Addr    =
-User    =
-Pwd     =
-DB      =
+Addr        = 127.0.0.1:3306
+User        =
+Pwd         =
+DB          =
+MaxConns    = 1500
+
+[Redis]
+Addr        = 127.0.0.1:6379
+Pwd         = 
+DB          = 0
+Prefix      = PROJECTNAME
+Sep         = :
+PoolSize    = 500
+DialTimeout = 30
+
+[App]
+AppName     = PROJECTNAME
+AppId       = 1
+DebugMode   = false
 
 [Fiber]
 ListenOption    = HTTP
@@ -24,9 +30,8 @@ HTTPListenAddr  = :80
 HTTPSListenAddr = :443
 TLSCertFile     = ./cert.pem
 TLSKeyFile      = ./cert.key
-LimitMax        = 7
-LimitExp        = 10
-
-[App]
-AppName =
-NodeId  = 1
+RequestStdOut   = true
+MaxConns        = 256
+LimitKey        = X-Forwarded-For
+LimitMax        = 20
+LimitExp        = 5
