--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
-[Log] ;日志
-FilePath    = ./run.log
+[Log]
+InfoPath    = ./info.log
+ErrPath     = ./err.log
 MaxSize     = 50
 DebugInfo   = false
 
